# MigangBot

./: .dockerignore  .env  .env.prod  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  bot.py  db_config.yaml.example  dockerfile  pyproject.toml
.cursor/rules/: create-nonebot-plugin.json  git-commit-message.json  python-docstring.json  python-format.json  python-import.json  python-test.json  python-typing.json
.github/workflows/: auto_format.yml  build_docker_and_publish.yml  codecov.yml  pdm_update_deps.yml  release_draft.yml  update_poetry_lock.yml
aerich_config_helper/: config_loader.py  file_operation.py  orm_config.py
aerich_config_helper/model/: __init__.py  bank.py  chatgpt_chat_history.py  chatgpt_chat_impression.py  feedback.py  goods_group.py  goods_info.py  goods_use_log.py  group_status.py  group_welcome.py  shop_group_log.py  shop_log.py  sign_in.py  transaction_log.py  user_bag.py  user_property.py  user_status.py
docker/: .env.prod  config.yml  docker-compose.yml  docker-compose.yml.napcat
migang/core/: __init__.py  constant.py  event_register.py  exception.py  path.py  permission.py
migang/core/core_plugins/: about.py  dismiss.py  group_bot.py  schedule.py  send_detect.py  switch_bot.py
migang/core/cross_platform/: __init__.py  adapters.py  depends.py  message.py  permission.py  session.py
migang/core/database/: __init__.py  config_loader.py
migang/core/decorator/: __init__.py  shop.py  sign_in_effect.py  singleton.py
migang/core/manager/: __init__.py  cd_manager.py  config_manager.py  count_manager.py  data_class.py  goods_manager.py  group_bot_manager.py  group_manager.py  permission_manager.py  plugin_manager.py  request_manager.py  task_manager.py  user_manager.py
migang/core/message/: __init__.py  broadcast.py
migang/core/models/: __init__.py  bank.py  chatgpt_chat_history.py  chatgpt_chat_impression.py  chatgpt_chat_memory.py  feedback.py  goods_group.py  goods_info.py  goods_use_log.py  group_status.py  group_welcome.py  migang_id.py  nickname.py  platform_id.py  shop.py  shop_group_log.py  shop_log.py  sign_in.py  transaction_log.py  user_bag.py  user_property.py  user_status.py
migang/core/rules/: __init__.py  task_rule.py
migang/core/utils/: config_operation.py  file_operation.py  http_utils.py  http_utls.py  image.py  langchain_tool.py  message.py  migangbot_api.py  task_operation.py
migang/models/: __init__.py  eorzean_zhanbu.py
migang/plugins/: test.py
migang/plugins/aircon/: __init__.py  airconutils.py  model.py
migang/plugins/answers_book/: __init__.py  answersbook.json
migang/plugins/asoulcnki/: __init__.py  data.json  data_source.py
migang/plugins/chp/: __init__.py
migang/plugins/chrev/: __init__.py  data_source.py
migang/plugins/code_runner/: __init__.py  data_source.py
migang/plugins/comment_163/: __init__.py
migang/plugins/crazy_thusday/: __init__.py  config.py
migang/plugins/daily_hotwords/: __init__.py  data_source.py  model.py  schedule.py
migang/plugins/daily_news/: __init__.py
migang/plugins/daily_wife/: __init__.py  model.py
migang/plugins/dingong_voice/: __init__.py
migang/plugins/duilian/: __init__.py
migang/plugins/eorzean_zhanbu/: __init__.py  data_source.py  model.py  zhanbu_config.py
migang/plugins/epic/: __init__.py  data_source.py
migang/plugins/exchange_rate_conversion/: __init__.py
migang/plugins/fast_help/: __init__.py
migang/plugins/ffxiv/: __init__.py
migang/plugins/game_draw/: __init__.py  config.py  count_manager.py  util.py
migang/plugins/genshin/: __init__.py
migang/plugins/gushi/: __init__.py
migang/plugins/howtocook/: __init__.py  data_source.py  md_render.py
migang/plugins/image_cartoonize/: __init__.py  cartoon.py
migang/plugins/jitang/: __init__.py
migang/plugins/joke/: __init__.py  jokes.json
migang/plugins/jrrp/: __init__.py  config.py  data_source.py
migang/plugins/make_qrcode/: __init__.py
migang/plugins/mc_query/: __init__.py  data_source.py  draw.py  model.py
migang/plugins/mc_server_status_query/: __init__.py  data_source.py  model.py
migang/plugins/md_to_pic/: __init__.py
migang/plugins/memes-remote/: __init__.py  websocket.py
migang/plugins/memes_remote/: __init__.py  websocket.py
migang/plugins/miragetank/: __init__.py  data_source.py
migang/plugins/moyu_calendar/: __init__.py
migang/plugins/music/: __init__.py  data_source.py  kugo_music.py  kuwo_music.py  migu_music.py  netease_music.py  qq_music.py
migang/plugins/mxh/: __init__.py  story.json
migang/plugins/nonebot_plugin_bottle/: __init__.py  data_source.py
migang/plugins/nonebot_plugin_capoo/: __init__.py  config.py  download.py  sqlite.py
migang/plugins/one_friend/: __init__.py
migang/plugins/oreo/: __init__.py
migang/plugins/pcr_hourcall/: __init__.py  data.py
migang/plugins/pdf_search/: __init__.py
migang/plugins/poke/: __init__.py
migang/plugins/qrcode/: __init__.py
migang/plugins/repeat/: __init__.py
migang/plugins/roll/: __init__.py
migang/plugins/russian/: __init__.py  data_source.py  model.py
migang/plugins/schedule_reminder/: __init__.py  data_source.py  model.py
migang/plugins/search_anime/: __init__.py  data_source.py
migang/plugins/shiningnikki_image/: __init__.py  data_source.py
migang/plugins/suoxie/: __init__.py
migang/plugins/talk/: __init__.py
migang/plugins/tarot/: __init__.py
migang/plugins/today_in_history/: __init__.py  data_source.py
migang_migrations/migangbot/: 0_20231230103403_init.py  1_20231231040543_remove_user_id_pk.py  2_20231231040834_user_id_to_str.py  3_20240108085149_feedback_to_json.py
migangbot/core/: __init__.py  exception.py  path.py  permission.py
migangbot/models/: __init__.py  eorzean_zhanbu.py
migrations/models/: 0_20250527091741_init.py  1_20250527092110_update.py  2_20250527092129_update.py
resources/font/: font_index.json
resources/text/: sensitive_words.txt  wordcloud_userdict.txt
scripts/: bison.conf.example  generate_run_script.py  generate_supervisor_conf.py  migangbot.conf
scripts/datastoreToOrm/: before.sql  post.sql
(+281 files in other folders)
