[tool.poetry]
name = "migangbot"
version = "0.1.0"
description = "基于Nonebot2与go-cqhttp的机器人"
authors = ["LambdaYH"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0rc4"}
nonebot-adapter-onebot = "^2.2.3"
nonebot-plugin-apscheduler = "^0.2.0"

ujson = "^5.7.0"
ruamel-yaml = "^0.17.21"
async-lru = "^2.0.2"
tortoise-orm = {extras = ["accel", "asyncmy", "asyncpg"], version = "^0.19.3"}
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
lxml = "^4.9.2"
tenacity = "^8.2.1"
fake-useragent = "^1.1.1"
aiocache = "^0.12.1"
azure-cognitiveservices-speech = "^1.25.0"
deep-translator = "^1.10.0"
pyzbar = "^0.1.9"
anyio = "^3.6.2"
mcstatus = "^10.0.3"
croniter = "^1.3.8"
python-levenshtein = "^0.21.0"
thefuzz = "^0.19.0"
psutil = "^5.9.5"
cattrs = "^22.2.0"
pil-utils = "^0.1.7"
nb-cli = "^1.1.2"
cn2an = "^0.5.19"
pygal = "^3.0.0"
qrcode = "^7.4.2"
openai = "^0.27.5"
cairosvg = "^2.7.0"
cachetools = "^5.3.0"
dateparser = "^1.1.7"
feedparser = "^6.0.10"
transformers = "^4.27.3"

nonebot-bison = "^0.7.1"
nonebot-plugin-word-bank2 = "^0.1.7"
nonebot-plugin-htmlrender = "^0.2.0.3"
nonebot-plugin-memes = "^0.4.5"
nonebot-plugin-shindan = "^0.3.2"
nonebot-plugin-remake = "^0.2.7"
nonebot-plugin-emojimix = "^0.2.0"
nonebot-plugin-wordcloud = "^0.4.8"
nonebot-plugin-ddcheck = "^0.2.0"
nonebot-plugin-handle = "^0.2.0"
nonebot-plugin-imagetools = "^0.2.1"
nonebot-plugin-cocdicer = "^0.4.0"
nonebot-plugin-withdraw = "^0.2.3"
nonebot-plugin-hikarisearch = "^0.1.7"
nonebot-plugin-datastore = "^0.6.3"
nonebot-plugin-oddtext = "^0.1.2"
nonebot-plugin-gachalogs = "^0.2.12"
nonebot-plugin-gspanel = "^0.2.23"
nonebot-plugin-gsmaterial = "^0.2.5"
nonebot-plugin-gsabyss = "^0.1.4"
nonebot-plugin-gscode = "^0.1.6"
nonebot-plugin-wordle = "^0.2.1"
nonebot-plugin-sentry = "^0.3.0"
nonebot-plugin-bottle = "^1.0.0.4"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_datastore",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_sentry",
    "nonebot_plugin_memes",
    "nonebot_plugin_word_bank2",
    "nonebot_bison",
    "nonebot_plugin_shindan",
    "nonebot_plugin_remake",
    "nonebot_plugin_emojimix",
    "nonebot_plugin_wordcloud",
    "nonebot_plugin_ddcheck",
    "nonebot_plugin_handle",
    "nonebot_plugin_imagetools",
    "nonebot_plugin_cocdicer",
    "nonebot_plugin_withdraw",
    "nonebot_plugin_hikarisearch",
    "nonebot_plugin_oddtext",
    "nonebot_plugin_gachalogs",
    "nonebot_plugin_gspanel",
    "nonebot_plugin_gsmaterial",
    "nonebot_plugin_gsabyss",
    "nonebot_plugin_gscode",
    "nonebot_plugin_wordle",
    "nonebot_plugin_bottle"
]
plugin_dirs = ["migang/core/core_plugins", "migang/plugins"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
